# TDS

./: .env  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_TO_RENDER_QUICK.md  Dockerfile  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  RENDER_DEPLOYMENT.md  SECURITY.md  SETUP.md  START_HERE.md  app.py  curl_command.txt  deploy.sh  deployment-api.service  docker-compose.yml  env.template  nginx.conf  pyproject.toml  quickstart.py  render.yaml  requirements.txt  test_api.py  test_integrations.py
app/: attachments.py  build_pipeline.py  cli.py  config.py  database.py  github_service.py  llm_builder.py  logging.py  main.py  models.py  schemas.py  security.py  utils.py
scripts/: evaluate.py  round1.py  round2.py
