[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-build-platform"
version = "0.1.0"
description = "FastAPI service that automates LLM-generated app builds and GitHub Pages deployments"
authors = [
  { name = "Student" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "sqlmodel>=0.0.16",
  "gitpython>=3.1.40",
  "openai>=1.35.0",
  "python-dotenv>=1.0.1",
  "pydantic-settings>=2.3.4",
  "structlog>=24.1.0",
  "typer[all]>=0.12.3",
  "python-dateutil>=2.9.0",
  "tenacity>=8.4.1",
  "orjson>=3.10.3",
  "aiofiles>=23.2.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "respx>=0.21.1",
  "coverage>=7.5.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "B", "UP", "ASYNC"]


